feat: update Team page

--- a/_pages/team/_posts/2024-08-15-jinu_lee.md
+++ b/_pages/team/_posts/2024-08-15-jinu_lee.md
@@ -4,7 +4,8 @@ category: student
 title: Jinu Lee
 image: jinu_lee.jpg
 role: Ph.D. Student
-permalink: 'team/jinu_lee'
+interest: "Semantics of reasoning (Neuro-symbolic reasoning and reasoning evaluation)"
+netid: jinulee2
 social:
     twitter: https://x.com/jinulee_v
     linkedin: https://www.linkedin.com/in/jinu-lee-212222208/
